--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,11 @@
     background-attachment: fixed
 }
 
+@font-face {
+    font-family: 'HeaderFont';
+    src: url('./fonts/HappyTimeThree-mDDj.otf') format('opentype');
+}
+
 
 body{
     font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;
@@ -34,8 +39,9 @@ body{
     font-size: 40px;
     font-weight: 400;
     color: #E0E0E0;
-    margin-bottom: 20px;
     text-align: center;
+    font-family: 'HeaderFont';
+    line-height: 0.9;
 }
 .b-t1{
     color: #E0E0E0;
@@ -60,14 +66,26 @@ body{
 
 }
 
-.bi-brands:hover{
+.bi-steam:hover{
+    transition: all 0.5s ease; 
+    color: #000000 ; 
+}
+
+.bi-linkedin:hover{
     transition: all 0.5s ease; 
     color: #3366CC ; 
 }
+
+.bi-youtube:hover{
+    transition: all 0.5s ease; 
+    color: #FF0000 ; 
+}
+
 .bi-brands{
     font-weight: 400;
     font-size: 35px;
     margin-left: 20px;
+    padding-bottom: 20px;
     color: #E0E0E0	;
     }
 
