--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <h2 id="loader-error"><p>Error has been occured !!!</p></h2>
     </div>
     <section class="top">
-        <div class="image">
+        <div id="image">
             <img src="../static/images/profile.png">
         </div>
         
