--- a/static/style.css
+++ b/static/style.css
@@ -53,7 +53,11 @@ body{
     align-items: flex-end;
 }
 
-.image img{
+#image{
+    display: none;
+}
+
+#image img{
     width: 80vh;
     height:90vh;
     margin-right:20px;
