--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="../static/images/site.ico">
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/css/bootstrap-icons.css">
-    <script src="../static/script.js"></script>
+    <script type= 'module' src="../static/script.js"></script>
 </head>
 <body>
     <div id="loading">
